v0.0.1/modules/schema/pages/class/NuclearGeneratingUnit.adoc
= `NuclearGeneratingUnit`
:toclevels: 4


+++A nuclear generating unit.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:NuclearGeneratingUnit`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/PowerSystemResource.adoc[`PowerSystemResource`]
*** xref::class/Equipment.adoc[`Equipment`]
**** xref::class/GeneratingUnit.adoc[`GeneratingUnit`]
***** *`NuclearGeneratingUnit`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
NuclearGeneratingUnit {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}































































RotatingMachine {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



GenUnitOpSchedule {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ControlAreaGeneratingUnit {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



GrossToNetActivePowerCurve {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



GenUnitOpCostCurve {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



WeatherStation {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



OperationalLimitSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ContingencyEquipment {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



EquipmentContainer {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Fault {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



LimitDependency {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



EquipmentLimitSeriesComponent {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ProtectiveActionEquipment {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PinEquipment {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



EquipmentUnavailabilitySchedule {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



EquipmentContainer {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



UsagePoint {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Outage {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



OperationalRestriction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Control {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Measurement {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



PSRType {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ConfigurationEvent {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ReportingGroup {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



OperatingShare {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



AssetInfo {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



VerificationAction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



ClearanceDocument {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



GenericAction {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



PSREvent {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Asset {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



Location {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



OperationalTag {
  style {
    fill: "#d1e7c2"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}


































NuclearGeneratingUnit -> RotatingMachine: RotatingMachine


NuclearGeneratingUnit -> GenUnitOpSchedule: GenUnitOpSchedule


NuclearGeneratingUnit -> ControlAreaGeneratingUnit: ControlAreaGeneratingUnit


NuclearGeneratingUnit -> GrossToNetActivePowerCurve: GrossToNetActivePowerCurves


NuclearGeneratingUnit -> GenUnitOpCostCurve: GenUnitOpCostCurves


NuclearGeneratingUnit -> WeatherStation: WeatherStation


NuclearGeneratingUnit -> OperationalLimitSet: OperationalLimitSet


NuclearGeneratingUnit -> ContingencyEquipment: ContingencyEquipment


NuclearGeneratingUnit -> EquipmentContainer: EquipmentContainer


NuclearGeneratingUnit -> Fault: Faults


NuclearGeneratingUnit -> LimitDependency: LimitDependencyModel


NuclearGeneratingUnit -> EquipmentLimitSeriesComponent: EqiupmentLimitSeriesComponent


NuclearGeneratingUnit -> ProtectiveActionEquipment: ProtectiveActionEquipment


NuclearGeneratingUnit -> PinEquipment: PinEquipment


NuclearGeneratingUnit -> EquipmentUnavailabilitySchedule: EquipmentUnavailabilitySchedule


NuclearGeneratingUnit -> EquipmentContainer: AdditionalEquipmentContainer


NuclearGeneratingUnit -> UsagePoint: UsagePoints


NuclearGeneratingUnit -> Outage: Outages


NuclearGeneratingUnit -> OperationalRestriction: OperationalRestrictions


NuclearGeneratingUnit -> Control: Controls


NuclearGeneratingUnit -> Measurement: Measurements


NuclearGeneratingUnit -> PSRType: PSRType


NuclearGeneratingUnit -> ConfigurationEvent: ConfigurationEvent


NuclearGeneratingUnit -> ReportingGroup: ReportingGroup


NuclearGeneratingUnit -> OperatingShare: OperatingShare


NuclearGeneratingUnit -> AssetInfo: AssetDatasheet


NuclearGeneratingUnit -> VerificationAction: VerificationAction


NuclearGeneratingUnit -> ClearanceDocument: Clearances


NuclearGeneratingUnit -> GenericAction: GenericAction


NuclearGeneratingUnit -> PSREvent: PSREvents


NuclearGeneratingUnit -> Asset: Assets


NuclearGeneratingUnit -> Location: Location


NuclearGeneratingUnit -> OperationalTag: OperationalTags


NuclearGeneratingUnit -> DiagramObject: DiagramObjects


NuclearGeneratingUnit -> InstanceSet: InstanceSet


NuclearGeneratingUnit -> Name: Names


NuclearGeneratingUnit -> ChangeSetMember: PropertiesCIMDataObject


NuclearGeneratingUnit -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<AssetDatasheet,`AssetDatasheet`>>
| 0..1
| xref::class/AssetInfo.adoc[`AssetInfo`]
| +++Datasheet information for this power system resource.+++

| <<EquipmentContainer,`EquipmentContainer`>>
| 0..1
| xref::class/EquipmentContainer.adoc[`EquipmentContainer`]
| +++Container of this equipment.+++

| <<GenUnitOpSchedule,`GenUnitOpSchedule`>>
| 0..1
| xref::class/GenUnitOpSchedule.adoc[`GenUnitOpSchedule`]
| +++A generating unit may have an operating schedule, indicating the planned operation of the unit.+++

| <<Location,`Location`>>
| 0..1
| xref::class/Location.adoc[`Location`]
| +++Location of this power system resource.+++

| <<PSRType,`PSRType`>>
| 0..1
| xref::class/PSRType.adoc[`PSRType`]
| +++Custom classification for this power system resource.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aggregate,`aggregate`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++The aggregate flag provides an alternative way of representing an aggregated (equivalent) element. It is applicable in cases when the dedicated classes for equivalent equipment do not have all of the attributes necessary to represent the required level of detail.  In case the flag is set to “true” the single instance of equipment represents multiple pieces of equipment that have been modelled together as an aggregate equivalent obtained by a network reduction procedure. Examples would be power transformers or synchronous machines operating in parallel modelled as a single aggregate power transformer or aggregate synchronous machine.  
The attribute is not used for EquivalentBranch, EquivalentShunt and EquivalentInjection.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<allocSpinResP,`allocSpinResP`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++The planned unused capacity (spinning reserve) which can be used to support emergency load.+++

| <<autoCntrlMarginP,`autoCntrlMarginP`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++The planned unused capacity which can be used to support automatic control overruns.+++

| <<baseP,`baseP`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++For dispatchable units, this value represents the economic active power basepoint, for units that are not dispatchable, this value represents the fixed generation value. The value shall be between the operating low and high limits.+++

| <<controlDeadband,`controlDeadband`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++Unit control error deadband. When a unit's desired active power change is less than this deadband, then no control pulses will be sent to the unit.+++

| <<controlPulseHigh,`controlPulseHigh`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Pulse high limit which is the largest control pulse that the unit can respond to.+++

| <<controlPulseLow,`controlPulseLow`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Pulse low limit which is the smallest control pulse that the unit can respond to.+++

| <<controlResponseRate,`controlResponseRate`>>
| 0..1
| xref::class/ActivePowerChangeRate.adoc[`ActivePowerChangeRate`]
| +++Unit response rate which specifies the active power change for a control pulse of one second in the most responsive loading level of the unit.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<efficiency,`efficiency`>>
| 0..1
| xref::class/PerCent.adoc[`PerCent`]
| +++The efficiency of the unit in converting mechanical energy, from the prime mover, into electrical energy.+++

| <<genControlMode,`genControlMode`>>
| 0..1
| xref::enumeration/GeneratorControlMode.adoc[`GeneratorControlMode`]
| +++The unit control mode.+++

| <<genControlSource,`genControlSource`>>
| 0..1
| xref::enumeration/GeneratorControlSource.adoc[`GeneratorControlSource`]
| +++The source of controls for a generating unit.  Defines the control status of the generating unit.+++

| <<governorMPL,`governorMPL`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Governor motor position limit.+++

| <<governorSCD,`governorSCD`>>
| 0..1
| xref::class/PerCent.adoc[`PerCent`]
| +++Governor Speed Changer Droop.   This is the change in generator power output divided by the change in frequency normalized by the nominal power of the generator and the nominal frequency and expressed in percent and negated. A positive value of speed change droop provides additional generator output upon a drop in frequency.+++

| <<highControlLimit,`highControlLimit`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++High limit for secondary (AGC) control.+++

| <<inService,`inService`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Specifies the availability of the equipment. True means the equipment is available for topology processing, which determines if the equipment is energized or not. False means that the equipment is treated by network applications as if it is not in the model.+++

| <<initialP,`initialP`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++Default initial active power  which is used to store a powerflow result for the initial active power for this unit in this network configuration.+++

| <<longPF,`longPF`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Generating unit long term economic participation factor.+++

| <<lowControlLimit,`lowControlLimit`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++Low limit for secondary (AGC) control.+++

| <<lowerRampRate,`lowerRampRate`>>
| 0..1
| xref::class/ActivePowerChangeRate.adoc[`ActivePowerChangeRate`]
| +++The normal maximum rate the generating unit active power output can be lowered by control actions.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<maxEconomicP,`maxEconomicP`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++Maximum high economic active power limit, that should not exceed the maximum operating active power limit.+++

| <<maxOperatingP,`maxOperatingP`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++This is the maximum operating active power limit the dispatcher can enter for this unit.+++

| <<maximumAllowableSpinningReserve,`maximumAllowableSpinningReserve`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++Maximum allowable spinning reserve. Spinning reserve will never be considered greater than this value regardless of the current operating point.+++

| <<minEconomicP,`minEconomicP`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++Low economic active power limit that shall be greater than or equal to the minimum operating active power limit.+++

| <<minOperatingP,`minOperatingP`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++This is the minimum operating active power limit the dispatcher can enter for this unit.+++

| <<minimumOffTime,`minimumOffTime`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Minimum time interval between unit shutdown and startup.+++

| <<modelDetail,`modelDetail`>>
| 0..1
| xref::class/Classification.adoc[`Classification`]
| +++Detail level of the generator model data.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<networkAnalysisEnabled,`networkAnalysisEnabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++The equipment is enabled to participate in network analysis.  If unspecified, the value is assumed to be true.+++

| <<nominalP,`nominalP`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++The nominal power of the generating unit.  Used to give precise meaning to percentage based attributes such as the governor speed change droop (governorSCD attribute).
The attribute shall be a positive value equal to or less than RotatingMachine.ratedS.+++

| <<normalPF,`normalPF`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Generating unit economic participation factor.  The sum of the participation factors across generating units does not have to sum to one.  It is used for representing distributed slack participation factor. The attribute shall be a positive value or zero.+++

| <<normallyInService,`normallyInService`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Specifies the availability of the equipment under normal operating conditions. True means the equipment is available for topology processing, which determines if the equipment is energized or not. False means that the equipment is treated by network applications as if it is not in the model.+++

| <<penaltyFactor,`penaltyFactor`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Defined as: 1 / ( 1 - Incremental Transmission Loss); with the Incremental Transmission Loss expressed as a plus or minus value. The typical range of penalty factors is (0.9 to 1.1).+++

| <<raiseRampRate,`raiseRampRate`>>
| 0..1
| xref::class/ActivePowerChangeRate.adoc[`ActivePowerChangeRate`]
| +++The normal maximum rate the generating unit active power output can be raised by control actions.+++

| <<ratedGrossMaxP,`ratedGrossMaxP`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++The unit's gross rated maximum capacity (book value).
The attribute shall be a positive value.+++

| <<ratedGrossMinP,`ratedGrossMinP`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++The gross rated minimum generation level which the unit can safely operate at while delivering power to the transmission grid.
The attribute shall be a positive value.+++

| <<ratedNetMaxP,`ratedNetMaxP`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++The net rated maximum capacity determined by subtracting the auxiliary power used to operate the internal plant machinery from the rated gross maximum capacity.
The attribute shall be a positive value.+++

| <<shortPF,`shortPF`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Generating unit short term economic participation factor.+++

| <<startupCost,`startupCost`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++The initial startup cost incurred for each start of the GeneratingUnit.+++

| <<startupTime,`startupTime`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time it takes to get the unit on-line, from the time that the prime mover mechanical power is applied.+++

| <<tieLinePF,`tieLinePF`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Generating unit economic participation factor.+++

| <<totalEfficiency,`totalEfficiency`>>
| 0..1
| xref::class/PerCent.adoc[`PerCent`]
| +++The efficiency of the unit in converting the fuel into electrical energy.+++

| <<variableCost,`variableCost`>>
| 0..1
| xref::class/Money.adoc[`Money`]
| +++The variable cost component of production per unit of ActivePower.+++

| <<AdditionalEquipmentContainer,`AdditionalEquipmentContainer`>>
| 0..*
| xref::class/EquipmentContainer.adoc[`EquipmentContainer`]
| +++Additional equipment container beyond the primary equipment container.  The equipment is contained in another equipment container, but also grouped with this equipment container.+++

| <<Assets,`Assets`>>
| 0..*
| xref::class/Asset.adoc[`Asset`]
| +++All assets represented by this power system resource. For example, multiple conductor assets are electrically modelled as a single AC line segment.+++

| <<Clearances,`Clearances`>>
| 0..*
| xref::class/ClearanceDocument.adoc[`ClearanceDocument`]
| +++All clearances applicable to this power system resource.+++

| <<ConfigurationEvent,`ConfigurationEvent`>>
| 0..*
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]
| +++All configuration events created for this Power System resource.+++

| <<ContingencyEquipment,`ContingencyEquipment`>>
| 0..*
| xref::class/ContingencyEquipment.adoc[`ContingencyEquipment`]
| +++The contingency equipments in which this equipment participates.+++

| <<ControlAreaGeneratingUnit,`ControlAreaGeneratingUnit`>>
| 0..*
| xref::class/ControlAreaGeneratingUnit.adoc[`ControlAreaGeneratingUnit`]
| +++ControlArea specifications for this generating unit.+++

| <<Controls,`Controls`>>
| 0..*
| xref::class/Control.adoc[`Control`]
| +++The controller outputs used to actually govern a regulating device, e.g. the magnetization of a synchronous machine or capacitor bank breaker actuator.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<EqiupmentLimitSeriesComponent,`EqiupmentLimitSeriesComponent`>>
| 0..*
| xref::class/EquipmentLimitSeriesComponent.adoc[`EquipmentLimitSeriesComponent`]
| +++Equipment limit series calculation component to which this equipment contributes.+++

| <<EquipmentUnavailabilitySchedule,`EquipmentUnavailabilitySchedule`>>
| 0..*
| xref::class/EquipmentUnavailabilitySchedule.adoc[`EquipmentUnavailabilitySchedule`]
| n/a

| <<Faults,`Faults`>>
| 0..*
| xref::class/Fault.adoc[`Fault`]
| +++All faults on this equipment.+++

| <<GenUnitOpCostCurves,`GenUnitOpCostCurves`>>
| 0..*
| xref::class/GenUnitOpCostCurve.adoc[`GenUnitOpCostCurve`]
| +++A generating unit may have one or more cost curves, depending upon fuel mixture and fuel cost.+++

| <<GenericAction,`GenericAction`>>
| 0..*
| xref::class/GenericAction.adoc[`GenericAction`]
| +++The generic action that is performed on the power system resource+++

| <<GrossToNetActivePowerCurves,`GrossToNetActivePowerCurves`>>
| 0..*
| xref::class/GrossToNetActivePowerCurve.adoc[`GrossToNetActivePowerCurve`]
| +++A generating unit may have a gross active power to net active power curve, describing the losses and auxiliary power requirements of the unit.+++

| <<LimitDependencyModel,`LimitDependencyModel`>>
| 0..*
| xref::class/LimitDependency.adoc[`LimitDependency`]
| +++Limit dependencymodels organized under this equipment as a means for organizing the model in a tree view.+++

| <<Measurements,`Measurements`>>
| 0..*
| xref::class/Measurement.adoc[`Measurement`]
| +++The measurements associated with this power system resource.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<OperatingShare,`OperatingShare`>>
| 0..*
| xref::class/OperatingShare.adoc[`OperatingShare`]
| +++The operating shares of this power system resource.+++

| <<OperationalLimitSet,`OperationalLimitSet`>>
| 0..*
| xref::class/OperationalLimitSet.adoc[`OperationalLimitSet`]
| +++The operational limit sets associated with this equipment.+++

| <<OperationalRestrictions,`OperationalRestrictions`>>
| 0..*
| xref::class/OperationalRestriction.adoc[`OperationalRestriction`]
| +++All operational restrictions for this equipment.+++

| <<OperationalTags,`OperationalTags`>>
| 0..*
| xref::class/OperationalTag.adoc[`OperationalTag`]
| +++All operational tags placed on this power system resource.+++

| <<Outages,`Outages`>>
| 0..*
| xref::class/Outage.adoc[`Outage`]
| +++All outages in which this equipment is involved.+++

| <<PSREvents,`PSREvents`>>
| 0..*
| xref::class/PSREvent.adoc[`PSREvent`]
| +++All events associated with this power system resource.+++

| <<PinEquipment,`PinEquipment`>>
| 0..*
| xref::class/PinEquipment.adoc[`PinEquipment`]
| n/a

| <<ProtectiveActionEquipment,`ProtectiveActionEquipment`>>
| 0..*
| xref::class/ProtectiveActionEquipment.adoc[`ProtectiveActionEquipment`]
| +++Protective action is controlling equipment. This can be direct signals from the control center, or emulation of action done by protection equipment.+++

| <<ReportingGroup,`ReportingGroup`>>
| 0..*
| xref::class/ReportingGroup.adoc[`ReportingGroup`]
| +++Reporting groups to which this power system resource belongs.+++

| <<RotatingMachine,`RotatingMachine`>>
| 0..*
| xref::class/RotatingMachine.adoc[`RotatingMachine`]
| +++A synchronous machine may operate as a generator and as such becomes a member of a generating unit.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++

| <<UsagePoints,`UsagePoints`>>
| 0..*
| xref::class/UsagePoint.adoc[`UsagePoint`]
| +++All usage points connected to the electrical grid through this equipment.+++

| <<VerificationAction,`VerificationAction`>>
| 0..*
| xref::class/VerificationAction.adoc[`VerificationAction`]
| +++The verification action that is performed on the power system resource+++

| <<WeatherStation,`WeatherStation`>>
| 0..*
| xref::class/WeatherStation.adoc[`WeatherStation`]
| n/a
|===

'''


//[discrete]
[#AdditionalEquipmentContainer]
=== `AdditionalEquipmentContainer`
+++Additional equipment container beyond the primary equipment container.  The equipment is contained in another equipment container, but also grouped with this equipment container.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.AdditionalEquipmentContainer`
| Cardinality
| 0..*
| Type
| xref::class/EquipmentContainer.adoc[`EquipmentContainer`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

//[discrete]
[#aggregate]
=== `aggregate`
+++The aggregate flag provides an alternative way of representing an aggregated (equivalent) element. It is applicable in cases when the dedicated classes for equivalent equipment do not have all of the attributes necessary to represent the required level of detail.  In case the flag is set to “true” the single instance of equipment represents multiple pieces of equipment that have been modelled together as an aggregate equivalent obtained by a network reduction procedure. Examples would be power transformers or synchronous machines operating in parallel modelled as a single aggregate power transformer or aggregate synchronous machine.  
The attribute is not used for EquivalentBranch, EquivalentShunt and EquivalentInjection.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.aggregate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#allocSpinResP]
=== `allocSpinResP`
+++The planned unused capacity (spinning reserve) which can be used to support emergency load.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.allocSpinResP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#AssetDatasheet]
=== `AssetDatasheet`
+++Datasheet information for this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.AssetDatasheet`
| Cardinality
| 0..1
| Type
| xref::class/AssetInfo.adoc[`AssetInfo`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#Assets]
=== `Assets`
+++All assets represented by this power system resource. For example, multiple conductor assets are electrically modelled as a single AC line segment.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Assets`
| Cardinality
| 0..*
| Type
| xref::class/Asset.adoc[`Asset`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#autoCntrlMarginP]
=== `autoCntrlMarginP`
+++The planned unused capacity which can be used to support automatic control overruns.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.autoCntrlMarginP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#baseP]
=== `baseP`
+++For dispatchable units, this value represents the economic active power basepoint, for units that are not dispatchable, this value represents the fixed generation value. The value shall be between the operating low and high limits.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.baseP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#Clearances]
=== `Clearances`
+++All clearances applicable to this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Clearances`
| Cardinality
| 0..*
| Type
| xref::class/ClearanceDocument.adoc[`ClearanceDocument`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#ConfigurationEvent]
=== `ConfigurationEvent`
+++All configuration events created for this Power System resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.ConfigurationEvent`
| Cardinality
| 0..*
| Type
| xref::class/ConfigurationEvent.adoc[`ConfigurationEvent`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#ContingencyEquipment]
=== `ContingencyEquipment`
+++The contingency equipments in which this equipment participates.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.ContingencyEquipment`
| Cardinality
| 0..*
| Type
| xref::class/ContingencyEquipment.adoc[`ContingencyEquipment`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

//[discrete]
[#ControlAreaGeneratingUnit]
=== `ControlAreaGeneratingUnit`
+++ControlArea specifications for this generating unit.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.ControlAreaGeneratingUnit`
| Cardinality
| 0..*
| Type
| xref::class/ControlAreaGeneratingUnit.adoc[`ControlAreaGeneratingUnit`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#controlDeadband]
=== `controlDeadband`
+++Unit control error deadband. When a unit's desired active power change is less than this deadband, then no control pulses will be sent to the unit.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.controlDeadband`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#controlPulseHigh]
=== `controlPulseHigh`
+++Pulse high limit which is the largest control pulse that the unit can respond to.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.controlPulseHigh`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#controlPulseLow]
=== `controlPulseLow`
+++Pulse low limit which is the smallest control pulse that the unit can respond to.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.controlPulseLow`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#controlResponseRate]
=== `controlResponseRate`
+++Unit response rate which specifies the active power change for a control pulse of one second in the most responsive loading level of the unit.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.controlResponseRate`
| Cardinality
| 0..1
| Type
| xref::class/ActivePowerChangeRate.adoc[`ActivePowerChangeRate`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#Controls]
=== `Controls`
+++The controller outputs used to actually govern a regulating device, e.g. the magnetization of a synchronous machine or capacitor bank breaker actuator.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Controls`
| Cardinality
| 0..*
| Type
| xref::class/Control.adoc[`Control`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#efficiency]
=== `efficiency`
+++The efficiency of the unit in converting mechanical energy, from the prime mover, into electrical energy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.efficiency`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#EqiupmentLimitSeriesComponent]
=== `EqiupmentLimitSeriesComponent`
+++Equipment limit series calculation component to which this equipment contributes.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.EqiupmentLimitSeriesComponent`
| Cardinality
| 0..*
| Type
| xref::class/EquipmentLimitSeriesComponent.adoc[`EquipmentLimitSeriesComponent`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

//[discrete]
[#EquipmentContainer]
=== `EquipmentContainer`
+++Container of this equipment.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.EquipmentContainer`
| Cardinality
| 0..1
| Type
| xref::class/EquipmentContainer.adoc[`EquipmentContainer`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

//[discrete]
[#EquipmentUnavailabilitySchedule]
=== `EquipmentUnavailabilitySchedule`


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.EquipmentUnavailabilitySchedule`
| Cardinality
| 0..*
| Type
| xref::class/EquipmentUnavailabilitySchedule.adoc[`EquipmentUnavailabilitySchedule`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

//[discrete]
[#Faults]
=== `Faults`
+++All faults on this equipment.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.Faults`
| Cardinality
| 0..*
| Type
| xref::class/Fault.adoc[`Fault`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

//[discrete]
[#genControlMode]
=== `genControlMode`
+++The unit control mode.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.genControlMode`
| Cardinality
| 0..1
| Type
| xref::enumeration/GeneratorControlMode.adoc[`GeneratorControlMode`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#genControlSource]
=== `genControlSource`
+++The source of controls for a generating unit.  Defines the control status of the generating unit.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.genControlSource`
| Cardinality
| 0..1
| Type
| xref::enumeration/GeneratorControlSource.adoc[`GeneratorControlSource`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#GenericAction]
=== `GenericAction`
+++The generic action that is performed on the power system resource+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.GenericAction`
| Cardinality
| 0..*
| Type
| xref::class/GenericAction.adoc[`GenericAction`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#GenUnitOpCostCurves]
=== `GenUnitOpCostCurves`
+++A generating unit may have one or more cost curves, depending upon fuel mixture and fuel cost.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.GenUnitOpCostCurves`
| Cardinality
| 0..*
| Type
| xref::class/GenUnitOpCostCurve.adoc[`GenUnitOpCostCurve`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#GenUnitOpSchedule]
=== `GenUnitOpSchedule`
+++A generating unit may have an operating schedule, indicating the planned operation of the unit.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.GenUnitOpSchedule`
| Cardinality
| 0..1
| Type
| xref::class/GenUnitOpSchedule.adoc[`GenUnitOpSchedule`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#governorMPL]
=== `governorMPL`
+++Governor motor position limit.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.governorMPL`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#governorSCD]
=== `governorSCD`
+++Governor Speed Changer Droop.   This is the change in generator power output divided by the change in frequency normalized by the nominal power of the generator and the nominal frequency and expressed in percent and negated. A positive value of speed change droop provides additional generator output upon a drop in frequency.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.governorSCD`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#GrossToNetActivePowerCurves]
=== `GrossToNetActivePowerCurves`
+++A generating unit may have a gross active power to net active power curve, describing the losses and auxiliary power requirements of the unit.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.GrossToNetActivePowerCurves`
| Cardinality
| 0..*
| Type
| xref::class/GrossToNetActivePowerCurve.adoc[`GrossToNetActivePowerCurve`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#highControlLimit]
=== `highControlLimit`
+++High limit for secondary (AGC) control.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.highControlLimit`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#initialP]
=== `initialP`
+++Default initial active power  which is used to store a powerflow result for the initial active power for this unit in this network configuration.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.initialP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#inService]
=== `inService`
+++Specifies the availability of the equipment. True means the equipment is available for topology processing, which determines if the equipment is energized or not. False means that the equipment is treated by network applications as if it is not in the model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.inService`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#LimitDependencyModel]
=== `LimitDependencyModel`
+++Limit dependencymodels organized under this equipment as a means for organizing the model in a tree view.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.LimitDependencyModel`
| Cardinality
| 0..*
| Type
| xref::class/LimitDependency.adoc[`LimitDependency`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

//[discrete]
[#Location]
=== `Location`
+++Location of this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Location`
| Cardinality
| 0..1
| Type
| xref::class/Location.adoc[`Location`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#longPF]
=== `longPF`
+++Generating unit long term economic participation factor.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.longPF`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#lowControlLimit]
=== `lowControlLimit`
+++Low limit for secondary (AGC) control.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.lowControlLimit`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#lowerRampRate]
=== `lowerRampRate`
+++The normal maximum rate the generating unit active power output can be lowered by control actions.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.lowerRampRate`
| Cardinality
| 0..1
| Type
| xref::class/ActivePowerChangeRate.adoc[`ActivePowerChangeRate`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#maxEconomicP]
=== `maxEconomicP`
+++Maximum high economic active power limit, that should not exceed the maximum operating active power limit.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.maxEconomicP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#maximumAllowableSpinningReserve]
=== `maximumAllowableSpinningReserve`
+++Maximum allowable spinning reserve. Spinning reserve will never be considered greater than this value regardless of the current operating point.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.maximumAllowableSpinningReserve`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#maxOperatingP]
=== `maxOperatingP`
+++This is the maximum operating active power limit the dispatcher can enter for this unit.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.maxOperatingP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#Measurements]
=== `Measurements`
+++The measurements associated with this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.Measurements`
| Cardinality
| 0..*
| Type
| xref::class/Measurement.adoc[`Measurement`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#minEconomicP]
=== `minEconomicP`
+++Low economic active power limit that shall be greater than or equal to the minimum operating active power limit.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.minEconomicP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#minimumOffTime]
=== `minimumOffTime`
+++Minimum time interval between unit shutdown and startup.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.minimumOffTime`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#minOperatingP]
=== `minOperatingP`
+++This is the minimum operating active power limit the dispatcher can enter for this unit.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.minOperatingP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#modelDetail]
=== `modelDetail`
+++Detail level of the generator model data.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.modelDetail`
| Cardinality
| 0..1
| Type
| xref::class/Classification.adoc[`Classification`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#networkAnalysisEnabled]
=== `networkAnalysisEnabled`
+++The equipment is enabled to participate in network analysis.  If unspecified, the value is assumed to be true.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.networkAnalysisEnabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

//[discrete]
[#nominalP]
=== `nominalP`
+++The nominal power of the generating unit.  Used to give precise meaning to percentage based attributes such as the governor speed change droop (governorSCD attribute).
The attribute shall be a positive value equal to or less than RotatingMachine.ratedS.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.nominalP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#normallyInService]
=== `normallyInService`
+++Specifies the availability of the equipment under normal operating conditions. True means the equipment is available for topology processing, which determines if the equipment is energized or not. False means that the equipment is treated by network applications as if it is not in the model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.normallyInService`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

//[discrete]
[#normalPF]
=== `normalPF`
+++Generating unit economic participation factor.  The sum of the participation factors across generating units does not have to sum to one.  It is used for representing distributed slack participation factor. The attribute shall be a positive value or zero.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.normalPF`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#OperatingShare]
=== `OperatingShare`
+++The operating shares of this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.OperatingShare`
| Cardinality
| 0..*
| Type
| xref::class/OperatingShare.adoc[`OperatingShare`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#OperationalLimitSet]
=== `OperationalLimitSet`
+++The operational limit sets associated with this equipment.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.OperationalLimitSet`
| Cardinality
| 0..*
| Type
| xref::class/OperationalLimitSet.adoc[`OperationalLimitSet`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

//[discrete]
[#OperationalRestrictions]
=== `OperationalRestrictions`
+++All operational restrictions for this equipment.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.OperationalRestrictions`
| Cardinality
| 0..*
| Type
| xref::class/OperationalRestriction.adoc[`OperationalRestriction`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

//[discrete]
[#OperationalTags]
=== `OperationalTags`
+++All operational tags placed on this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.OperationalTags`
| Cardinality
| 0..*
| Type
| xref::class/OperationalTag.adoc[`OperationalTag`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#Outages]
=== `Outages`
+++All outages in which this equipment is involved.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.Outages`
| Cardinality
| 0..*
| Type
| xref::class/Outage.adoc[`Outage`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

//[discrete]
[#penaltyFactor]
=== `penaltyFactor`
+++Defined as: 1 / ( 1 - Incremental Transmission Loss); with the Incremental Transmission Loss expressed as a plus or minus value. The typical range of penalty factors is (0.9 to 1.1).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.penaltyFactor`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#PinEquipment]
=== `PinEquipment`


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.PinEquipment`
| Cardinality
| 0..*
| Type
| xref::class/PinEquipment.adoc[`PinEquipment`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ProtectiveActionEquipment]
=== `ProtectiveActionEquipment`
+++Protective action is controlling equipment. This can be direct signals from the control center, or emulation of action done by protection equipment.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.ProtectiveActionEquipment`
| Cardinality
| 0..*
| Type
| xref::class/ProtectiveActionEquipment.adoc[`ProtectiveActionEquipment`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

//[discrete]
[#PSREvents]
=== `PSREvents`
+++All events associated with this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.PSREvents`
| Cardinality
| 0..*
| Type
| xref::class/PSREvent.adoc[`PSREvent`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#PSRType]
=== `PSRType`
+++Custom classification for this power system resource.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.PSRType`
| Cardinality
| 0..1
| Type
| xref::class/PSRType.adoc[`PSRType`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#raiseRampRate]
=== `raiseRampRate`
+++The normal maximum rate the generating unit active power output can be raised by control actions.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.raiseRampRate`
| Cardinality
| 0..1
| Type
| xref::class/ActivePowerChangeRate.adoc[`ActivePowerChangeRate`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#ratedGrossMaxP]
=== `ratedGrossMaxP`
+++The unit's gross rated maximum capacity (book value).
The attribute shall be a positive value.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.ratedGrossMaxP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#ratedGrossMinP]
=== `ratedGrossMinP`
+++The gross rated minimum generation level which the unit can safely operate at while delivering power to the transmission grid.
The attribute shall be a positive value.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.ratedGrossMinP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#ratedNetMaxP]
=== `ratedNetMaxP`
+++The net rated maximum capacity determined by subtracting the auxiliary power used to operate the internal plant machinery from the rated gross maximum capacity.
The attribute shall be a positive value.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.ratedNetMaxP`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#ReportingGroup]
=== `ReportingGroup`
+++Reporting groups to which this power system resource belongs.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.ReportingGroup`
| Cardinality
| 0..*
| Type
| xref::class/ReportingGroup.adoc[`ReportingGroup`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#RotatingMachine]
=== `RotatingMachine`
+++A synchronous machine may operate as a generator and as such becomes a member of a generating unit.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.RotatingMachine`
| Cardinality
| 0..*
| Type
| xref::class/RotatingMachine.adoc[`RotatingMachine`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#shortPF]
=== `shortPF`
+++Generating unit short term economic participation factor.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.shortPF`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#startupCost]
=== `startupCost`
+++The initial startup cost incurred for each start of the GeneratingUnit.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.startupCost`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#startupTime]
=== `startupTime`
+++Time it takes to get the unit on-line, from the time that the prime mover mechanical power is applied.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.startupTime`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#tieLinePF]
=== `tieLinePF`
+++Generating unit economic participation factor.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.tieLinePF`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#totalEfficiency]
=== `totalEfficiency`
+++The efficiency of the unit in converting the fuel into electrical energy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.totalEfficiency`
| Cardinality
| 0..1
| Type
| xref::class/PerCent.adoc[`PerCent`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#UsagePoints]
=== `UsagePoints`
+++All usage points connected to the electrical grid through this equipment.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.UsagePoints`
| Cardinality
| 0..*
| Type
| xref::class/UsagePoint.adoc[`UsagePoint`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===

//[discrete]
[#variableCost]
=== `variableCost`
+++The variable cost component of production per unit of ActivePower.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GeneratingUnit.variableCost`
| Cardinality
| 0..1
| Type
| xref::class/Money.adoc[`Money`]

| Inherited from
| xref::class/GeneratingUnit.adoc[`GeneratingUnit`]


|===

//[discrete]
[#VerificationAction]
=== `VerificationAction`
+++The verification action that is performed on the power system resource+++

[cols="h,4",width=65%]
|===
| URI
| `cim:PowerSystemResource.VerificationAction`
| Cardinality
| 0..*
| Type
| xref::class/VerificationAction.adoc[`VerificationAction`]

| Inherited from
| xref::class/PowerSystemResource.adoc[`PowerSystemResource`]


|===

//[discrete]
[#WeatherStation]
=== `WeatherStation`


[cols="h,4",width=65%]
|===
| URI
| `cim:Equipment.WeatherStation`
| Cardinality
| 0..*
| Type
| xref::class/WeatherStation.adoc[`WeatherStation`]

| Inherited from
| xref::class/Equipment.adoc[`Equipment`]


|===


